Added custom image items and custom texture loading. Removed some unused assets. Separated overwater and underwater shaders. All-around fixes and optimizations. Optimized shields.

--- a/qml.qrc
+++ b/qml.qrc
@@ -111,5 +111,7 @@
         <file>qml/glsl/calgari_fp.glsl</file>
         <file>qml/glsl/calgarimg_fp.glsl</file>
         <file>qml/glsl/calgaritriad_fp.glsl</file>
+        <file>qml/glsl/screen_renderer_water_vp.glsl</file>
+        <file>qml/chunk/PLevelChunkVisImpl.qml</file>
     </qresource>
 </RCC>
